--- a/src/components/SearchBox/Suggestion/index.scss
+++ b/src/components/SearchBox/Suggestion/index.scss
@@ -3,3 +3,12 @@
     margin: 5px;
     padding: 5px;
 }
+
+.suggestionComponent {
+  padding: 5px 5px 15px 15px;
+  border: 1px solid #e2e2e2;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 400px;
+  margin: 10px
+}
